# luacpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml
.github/workflows/: buildntest.yml  cmake-multi-platform.ym  cmake-multi-platform.yml  codeql.yml
examples/basics/: main.cpp
include/: FileScriptSource.hpp  LuaScript.hpp  LuaTable.hpp  MemoryScriptSource.hpp  ScriptSource.hpp  ScriptingInterface.hpp
include/luacpp/: Basics.hpp  Debug.hpp  Generic.hpp  Literals.hpp  LuaScript.hpp  LuaTable.hpp  Registry.hpp  State.hpp  Table.hpp  Type.hpp  TypeMismatchException.hpp  Version.hpp
lua/: CMakeLists.txt
modules/: Basics.ixx  Debug.ixx  Generic.ixx  Literals.ixx  Registry.ixx  Script.ixx  State.ixx  Table.ixx  Type.ixx  TypeMismatchException.ixx  Version.ixx
src/: Basics.cpp  Debug.cpp  FileScriptSource.cpp  Generic.cpp  Literals.cpp  LuaScript.cpp  LuaTable.cpp  Registry.cpp  ScriptingInterface.cpp  State.cpp  Table.cpp  Version.cpp
test/: GenericTest.cpp  LuaScriptTest.cpp  RegistryTest.cpp  StateTest.cpp  VersionTest.cpp
